--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <span class="glyphicon glyphicon-home"></span> Home</a>
             </li>
             <li id="navMenuButton">
-              <a href="#" onclick="$dc.loadMenuItems({{chosenCategoryShortName}});">
+              <a href="#" onclick="$dc.loadMenuItems({{randomCategoryShortName}});">
                 <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
             </li>
             <li>
